Added more styles in separate sheets

--- a/Home.html
+++ b/Home.html
@@ -2,47 +2,86 @@
 <html>
 
 <head>
-	<style>
-		header 
-		{
-			background-color: blue;
-			color: white;
-			text-align: center;
-		}
-		
-		a:link
-		{
-			color:powder-blue; 
-			background-color:transparent; 
-			text-decoration:underline;
-		}
-	</style>
+	<meta charset="utf-8" />
+	<title>Celeste Games</title>
+	<link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+	<div id="big_wrapper">
+	
+		<header id="top_header">
+			<h1>Celeste Games</h1>
+		</header>
+		
+		<nav id="top_menu">
+			<ul>
+				<li>Home</li>
+				<li>Tutorials</li>
+				<li>2D Engine</li>
+			</ul>
+		</nav>
+		
+		<div id="new_div">
+		
+			<section id="main_section">
+				<article>
+					<header>
+						<hgroup>
+							<h1>Title of Article</h1>
+							<h2>Subtitle of Article</h2>
+						</hgroup>
+					</header>
+					<p>Article Content</p>
+					<footer>
+						Written by Alan
+					</footer>
+				</article>
+				
+				<article>
+					<header>
+						<hgroup>
+							<h1>Title of Article</h1>
+							<h2>Subtitle of Article</h2>
+						</hgroup>
+					</header>
+					<p>Article Content</p>
+					<footer>
+						Written by Alan
+					</footer>
+				</article>
+			</section>
+			
+			<aside id="side_news">
+				<h4>News</h4>
+				News content
+			</aside>
+		
+		</div>
+		
+		<footer id="footer">
+			Footer
+		</footer>
 
-<header>
-	<h1>2D Engine Documentation</h1>
-</header>
-
-<body>
-	<h3>Introduction</h3>
-	<p>This website provides documentation for the classes contained within the 2D game engine available 
-	<a href="https://github.com/AlanWills/2DEngineGit/">here</a>.
-	<br/>
-	<br/>
-	Built around Monogame in C#, it provides a fast way to make 2D games.  Features include
-	<ul>
-		<li>Lighting</li>
-		<li>Collision detection</li>
-		<li>UI</li>
-		<li>Command system</li>
-	</ul>
-	The engine is written with extensibility in mind and is the result of constant improvement from use in games.
-	</p>
-	<br/>
-	<br/>
-	<a href="file:///C:/Users/Alan/Documents/HTML/MonogameIntro.html">Monogame</a>
+		<!--<h3>Introduction</h3>
+		<p>This website provides documentation for the classes contained within the 2D game engine available 
+		<a href="https://github.com/AlanWills/2DEngineGit/">here</a>.
+		<br/>
+		<br/>
+		Built around Monogame in C#, it provides a fast way to make 2D games.  Features include
+		<ul>
+			<li>Lighting</li>
+			<li>Collision detection</li>
+			<li>UI</li>
+			<li>Command system</li>
+		</ul>
+		The engine is written with extensibility in mind and is the result of constant improvement from use in games.
+		</p>
+		<br/>
+		<br/>
+		<a href="file:///C:/Users/Alan/Documents/HTML/MonogameIntro.html">Monogame</a>
+		-->
+	</div>
 <body/>
 
 </html>
